2007-08-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std[-compound].txt: Remove rare words. Rearrange and add
	compounds. (O Ang - Ho Nokhuk)

	* data/tdict-{common,spell}.txt: Add words.

2007-08-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std[-compound].txt: Remove rare words. Rearrange and add
	compounds. (Ho Hip)

	* data/tdict-{common,geo}.txt: Add words.

2007-08-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std[-compound].txt: Remove rare words. Rearrange and add
	compounds. (So Sua)

	* data/tdict-{common,district,geo,spell}.txt: Add words.

2007-07-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std[-compound].txt: Remove rare words. Rearrange and add
	compounds. (Wo Waen - So Rusi)

	* data/tdict-{common,ict,scicence,spell}.txt: Add words.

2007-07-12  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std[-compound].txt: Remove rare words. Rearrange and add
	compounds. (Ro Rua - Lu)

	* data/tdict-{common,science}.txt: Add words.

	* data/tdict-district.txt: Move non-province names to the bottom, so
	they are separated from provinces. Add two more names.

2007-07-09  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std[-compound].txt: Remove rare words. Rearrange and add
	compounds. (Mo Ma - Yo Yak)

	* data/tdict-{common,geo,ict,science,spell}.txt: Add words.

2007-07-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std[-compound].txt: Remove rare words. Rearrange and add
	compounds. (Pho Phan - Pho Samphao)

	* data/tdict-{common,spell,ict}.txt: Add words.

2007-06-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std[-compound].txt: Remove rare words. Rearrange and add
	compounds. (Tho Thahan - Fo Fa)

	* data/tdict-{common,spell}.txt: Add words.

2007-06-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std[-compound].txt: Remove more rare words. Move some